# stride

./: .gitignore  .travis.yml  CMakeCPP.cmake  CMakeConfig.cmake  CMakeLists.txt  CMakeReport.cmake
config/: epi_output.xml  run_default.xml  run_epi_output.xml  run_generate_BE.xml  run_generate_default.xml  run_generate_flanders.xml  run_generate_flanders_inBE.xml
doc/IntermediateReport/: report.tex
doc/ScientificPaper/: ScientificPaper.tex
doc/SimulationPaper/: simPaper.tex
doc/docplan/: docplan.tex  docplan.toc
doc/latex/: 05-Additional_Features.tex  UserManual.tex  UserManual.toc
doc/testplan/: testplan.tex  testplan.toc
main/: CMakeLists.txt
main/cpp/: CMakeLists.txt
main/cpp/contact/: AgeBrackets.cpp  AgeBrackets.h  AgeContactProfile.cpp  ContactType.cpp  Infector.cpp  PoolStatus.cpp  PoolStatus.h
main/cpp/disease/: Health.cpp  Health.h
main/cpp/execs/: ControlHelper.cpp  GenPopController.cpp  stride.cpp
main/cpp/geopop/: EpiGrid.cpp  EpiGrid.h  EpiLocation.cpp  EpiLocation.h  GeoGrid.cpp  GeoGrid.h  GeoGridConfig.cpp  GeoGridConfig.h  Location.cpp  Location.h
main/cpp/pop/: DefaultPopBuilder.cpp  GeoPopBuilder.cpp  GeoPopBuilder.h  Person.cpp  Person.h  Population.cpp  (+2 more)
main/gui/: CMakeLists.txt  Controller.cpp  Controller.h  Location.cpp  Location.h  MapController.cpp  MapController.h  elements.cpp  elements.h  gui.cpp
main/gui/resources/: AppWindow.qml  componentCreation.js  location.qml  sidebar.qml
script/: generate_households.py  generate_households_simBE.py  households_Limburg.csv  households_West-Flanders.csv  plot_simulation.py
(+189 files in other folders)
